fixed the .delete

--- a/research/stories/Amoeba/index.html
+++ b/research/stories/Amoeba/index.html
@@ -9,7 +9,7 @@
 <h1>CoAmoebae in 3-space</h1>
 <font size="+2"> 
  Mounir Nisse and 
- <a href="/~sottile/index.html">Frank
+ <a href="../../../index.html">Frank
 Sottile</a>
 </font><br>
 <font size="+1">
