--- a/research/stories/TourEiffel/index.html
+++ b/research/stories/TourEiffel/index.html
@@ -8,8 +8,8 @@
 <body bgcolor="#ffffff">
 <h1>La tour Eiffel &agrave; trois pieds</h1>
 <font size="+2"> 
- <a href="/~nisse/">Mounir Nisse</a> and 
- <a href="../../index.html">Frank Sottile</a>
+ <a href=""></aMounir Nisse> and 
+ <a href="../../../index.html">Frank Sottile</a>
 <br>
 </font><font size="+1">
 <br>
