--- a/research/stories/alphaCertified/FourBar/index.html
+++ b/research/stories/alphaCertified/FourBar/index.html
@@ -8,8 +8,8 @@
 <body bgcolor="#ffffff"> 
 <h1>Four-bar linkages</h1> 
 <font size="+2">  
- <a href="/~jhauenst">Jonathan Hauenstein</A> and  
- <a href="/~sottile/index.html">Frank Sottile</a> 
+ <a href=""></A>Jonathan Hauenstein and  
+ <a href="../../../index.html">Frank Sottile</a> 
 </font><br> 
 <font size=+1> 
  <a href="../index.html">Return</a> to the main page for alphaCertified. 
