--- a/research/stories/alphaCertified/index.html
+++ b/research/stories/alphaCertified/index.html
@@ -18,7 +18,7 @@
     solutions to polynomial equations </h1> 
    <font size="+2"> 
    <a href="http://www4.ncsu.edu/~jdhauens/">Jonathan Hauenstein</A> and 
-   <a href="/~sottile/index.html">Frank Sottile</a>
+   <a href="../../../index.html">Frank Sottile</a>
    </font><br><br>
       <TABLE><TR valign=center>
      <TD><A HREF="alphaCertified.pdf"><IMG SRC="pdf.gif"></A></TD>
