--- a/research/stories/coamoeba_surface/index.html
+++ b/research/stories/coamoeba_surface/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="#ffffff">
 <h1>Surface formed by a union of coamoebae of lines</h1>
 <font size="+2"> 
- <a href="/~nisse/"></a>Mounir Nisse and 
+ <a href=""></a>Mounir Nisse and 
  <a href="../../index.html">Frank Sottile</a>
 <br>
 </font><font size="+1">
