--- a/talks/02/CBMS.html
+++ b/talks/02/CBMS.html
@@ -12,7 +12,7 @@
 <I> University of Massachusetts-Amherst</I><BR>
 
 Invited Talk,    
-<A HREF="/conferences/cbms/">Solving Systems of Polynomial Equations</A>, 
+<A HREF="http://www.math.tamu.edu/conferences/cbms/">Solving Systems of Polynomial Equations</A>, 
 </TABLE>
 
 <P>
