--- a/talks/02/London.html
+++ b/talks/02/London.html
@@ -8,8 +8,7 @@
  <TR>
   <TD>
    <H1>Common Transversals and Tangents</H1>
-   <FONT size=+3><B><A HREF="/~sottile">Frank
-   Sottile</A></B></font><BR> 
+   <FONT size=+3><B><A HREF="../../index.html">Frank  Sottile</A></B></font><BR> 
    <FONT size=+2><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+2>Symbolic Computational Algebra 2002</font><BR>
    <FONT size=+2>University of Western Ontario</font>
@@ -43,8 +42,7 @@ symbolic and computational algebra.
 The results in this talk represent joint work with 
 <A HREF="http://www.ma.umist.ac.uk/gm/">Gabor Megyesi</A> and 
 <A HREF="http://www-m9.mathematik.uni-frankfurt.de/~theobald/">Thorsten Theobald</A>.<BR>
-&nbsp; &nbsp; A
-<A HREF="/~sottile/pages/2l2s/index.html">web page</A>
+&nbsp; &nbsp; A <A HREF="../../research/pages/2l2s/index.html">web page</A>
 featuring many, many pictures from this study.<BR><BR>
 <CENTER>
    <IMG SRC="London/12lines.gif"> &nbsp; &nbsp;
