--- a/talks/03/Columbia-motion.html
+++ b/talks/03/Columbia-motion.html
@@ -8,7 +8,7 @@
  <TR>
   <TD>
    <H1>The Real Story of Linear Series on <b>P</b><sup><small>1</small></sup></H1>
-   <FONT size=+3><B><A HREF="/~sottile">Frank
+   <FONT size=+3><B><A HREF="../../index.html">Frank
    Sottile</A></B></font><BR> 
    <FONT size=+2><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+2>Columbia University</font>
@@ -34,16 +34,16 @@ of some of the talk, below are pictures of linear series on
  of dimension 3 and degree 4 with simple real ramification.
 
 <CENTER>
-  <A HREF="../../pages/inflected/Quartics/GIF/I.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/I.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/II.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/II.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/III.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/III.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/IV.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/IV.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/V.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/V.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/I.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/I.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/II.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/II.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/III.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/III.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/IV.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/IV.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/V.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/V.collide.gif"></A>
 </CENTER>
 
 <HR>
