--- a/talks/03/Columbia.html
+++ b/talks/03/Columbia.html
@@ -8,7 +8,7 @@
  <TR>
   <TD>
    <H1>The Real Story of Linear Series on <b>P</b><sup><small>1</small></sup></H1>
-   <FONT size=+3><B><A HREF="/~sottile">Frank
+   <FONT size=+3><B><A HREF="../../index.html">Frank
    Sottile</A></B></font><BR> 
    <FONT size=+2><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+2>Columbia University</font>
@@ -35,11 +35,11 @@ of some of the talk, below are pictures of linear series on
 
 <CENTER>
  
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/I.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/II.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/III.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/IV.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/V.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/I.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/II.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/III.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/IV.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/V.gif">
  
 </CENTER>
 
