--- a/talks/03/INRIA.html
+++ b/talks/03/INRIA.html
@@ -8,7 +8,7 @@
  <TR>
   <TD>
    <H1>Common Transversals and Tangents</H1>
-   <FONT size=+3><B><A HREF="/~sottile">Frank
+   <FONT size=+3><B><A HREF="../../index.html">Frank
    Sottile</A></B></font><BR> 
    <FONT size=+2><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+2>INRIA, Nancy</font>
@@ -44,7 +44,7 @@ The results in this talk represent joint work with
 <A HREF="http://www.ma.umist.ac.uk/gm/">Gabor Megyesi</A> and 
 <A HREF="http://www-m9.mathematik.uni-frankfurt.de/~theobald/">Thorsten Theobald</A>.<BR>
 &nbsp; &nbsp; A
-<A HREF="/~sottile/pages/2l2s/index.html">web page</A>
+<A HREF="../../research/pages/2l2s/index.html">web page</A>
 featuring many, many pictures from this study.<BR><BR>
 <CENTER>
    <IMG SRC="../02/London/12lines.gif"> &nbsp; &nbsp;
