--- a/talks/03/Marburg-motion.html
+++ b/talks/03/Marburg-motion.html
@@ -8,7 +8,7 @@
  <TR>
   <TD>
    <FONT size=+2 color=blue><B>Real Rational Curves</B></font><BR> 
-   <FONT size=+2><B><A HREF="/~sottile">Frank
+   <FONT size=+2><B><A HREF="../../iindex.html">Frank
    Sottile</A></B></font><BR> 
    <FONT size=+1><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+1><B>Colloquium,<BR> Fachbereich Mathematik und Informatik</B></font><BR>
@@ -38,24 +38,24 @@ For a preview of some of the talk, below are pictures of real rational
 curves in the plane of degree 4 with simple real ramification.
 
 <CENTER>
-  <A HREF="../../pages/inflected/Quartics/GIF/I.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/I.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/II.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/II.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/III.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/III.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/IV.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/IV.collide.gif"></A>
-  <A HREF="../../pages/inflected/Quartics/GIF/V.collide.big.gif">
-        <IMG  SRC="../../pages/inflected/Quartics/GIF/V.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/I.collide.big.gif">
+        <IMG  SRC="../..research//pages/inflected/Quartics/GIF/I.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/II.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/II.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/III.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/III.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/IV.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/IV.collide.gif"></A>
+  <A HREF="../../research/pages/inflected/Quartics/GIF/V.collide.big.gif">
+        <IMG  SRC="../../research/pages/inflected/Quartics/GIF/V.collide.gif"></A>
 </CENTER>
 
 <HR>
 These curves, <A Href="Marburg.html">statically</A>.<BR>
 For a more complete story on these curves, go 
-<A HREF="../../pages/inflected/index.html">here</A>.<BR>
+<A HREF="../../research/pages/inflected/index.html">here</A>.<BR>
 For conjectures concerning real rational curves,
-try <A HREF="../../pages/shapiro/index.html">this</A>.
+try <A HREF="../../research/pages/shapiro/index.html">this</A>.
 
 <HR>
 </BODY>
