--- a/talks/03/Marburg.html
+++ b/talks/03/Marburg.html
@@ -8,7 +8,7 @@
  <TR>
   <TD>
    <FONT size=+2 color=blue><B>Real Rational Curves</B></font><BR> 
-   <FONT size=+2><B><A HREF="/~sottile">Frank
+   <FONT size=+2><B><A HREF="../../index.html">Frank
    Sottile</A></B></font><BR> 
    <FONT size=+1><B>University of Masssachusetts, Amherst</B></font><BR>
    <FONT size=+1><B>Colloquium,<BR> Fachbereich Mathematik und Informatik</B></font><BR>
@@ -39,20 +39,20 @@ curves in the plane of degree 4 with simple real ramification.
 
 <CENTER>
  
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/I.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/II.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/III.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/IV.gif">
-   <IMG  SRC="../../pages/inflected/Quartics/GIF/V.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/I.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/II.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/III.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/IV.gif">
+   <IMG  SRC="../../research/pages/inflected/Quartics/GIF/V.gif">
  
 </CENTER>
 
 <HR>
 These curves in <A Href="Marburg-motion.html">motion</A>.<BR>
 For a more complete story on these curves, go 
-<A HREF="../../pages/inflected/index.html">here</A>.<BR>
+<A HREF="../../research/pages/inflected/index.html">here</A>.<BR>
 For conjectures concerning real rational curves,
-try <A HREF="../../pages/shapiro/index.html">this</A>.
+try <A HREF="../../research/pages/shapiro/index.html">this</A>.
 
 <HR>
 </BODY>
