--- a/talks/05/Shapiro/bibl.html
+++ b/talks/05/Shapiro/bibl.html
@@ -62,12 +62,12 @@
   Mich.&nbsp;Math.&nbsp;J.&nbsp;<b>48</b> (2000), 573--592.
 
 <li>
- <A HREF="../../../pages/Flags/index.html"><tt>/~sottile/pages/Flags/index.html</tt></A>,
+ <A HREF="../../../research/pages/Flags/index.html"><tt>/~sottile/pages/Flags/index.html</tt></A>,
  <font color="AA11FF">Experimentation and Conjectures in the Real
  Schubert Calculus</font>, a web page companion to <font color=red>4</font>. 
 
 <li>
- <A HREF="../../../pages/shapiro/index.html"><tt>/~sottile/pages/shapiro/index.html</tt></A>,
+ <A HREF="../../../research/pages/shapiro/index.html"><tt>/~sottile/pages/shapiro/index.html</tt></A>,
  <font color="AA11FF">The Conjecture of Shapiro and Shapiro</font>, a
  web page companion to <font color=red>6</font>. 
 
