--- a/talks/08/Betti.html
+++ b/talks/08/Betti.html
@@ -13,15 +13,14 @@
     <h1>Betti number bounds for fewnomial hypersurfaces via stratified Morse theory</h1>
     <hr>
   <TD rowspan=3 valign=bottom>
-  <img src="../../abstracts/images/Betti.gif">
+  <img src="../../research/abstracts/images/Betti.gif">
   </TD>
    </td>
   </tr>
   <!---------------------------------------------------------->
   <tr>
    <td> 
-    <font size="+2"> <a href="/%7Esottile/index.html">Frank
-     Sottile</a></font>
+    <font size="+2"> <a href="../../index.html">Frank  Sottile</a></font>
     <hr>
    </td>
 </tr>
@@ -47,9 +46,8 @@
    <!-----------       Version of 15 January 2008    --------------->
    <!--------------------------------------------------------------->             
    <TABLE><TR valign=center>
-     <TD><A HREF="../../ps/Betti.ps.gz"><IMG SRC="../../images/ps.gif"></A></TD>
-     <TD><A HREF="../../pdf/Betti.pdf"><IMG SRC="../../images/pdf.gif"></A></TD>
-     <TD><A HREF="../../abstracts/Betti.html"><IMG SRC="../../images/abs.gif"></A></TD> 
+     <TD><A HREF="../../research/pdf/Betti.pdf"><IMG SRC="../../images/pdf.gif"></A></TD>
+     <TD><A HREF="../../research/abstracts/Betti.html"><IMG SRC="../../images/abs.gif"></A></TD> 
      <TD><FONT COLOR="FF00FF">
       <I>Betti number bounds for fewnomial hypersurfaces via stratified Morse
       theory</I></FONT>,   with 
