--- a/talks/08/Galois.html
+++ b/talks/08/Galois.html
@@ -56,9 +56,8 @@
    <!-----------     Version of 21 October 2007      --------------->
    <!--------------------------------------------------------------->             
    <TABLE><TR valign=center>
-     <TD><A HREF="../../ps/Galois.ps.gz"><IMG SRC="../../images/ps.gif"></A></TD>
-     <TD><A HREF="../../pdf/Galois.pdf"><IMG SRC="../../images/pdf.gif"></A></TD>
-     <TD><A HREF="../../abstracts/Galois.html"><IMG SRC="../../images/abs.gif"></A></TD> 
+     <TD><A HREF="../../research/pdf/Galois.pdf"><IMG SRC="../../research/images/pdf.gif"></A></TD>
+     <TD><A HREF="../../research/abstracts/Galois.html"><IMG SRC="../../research/images/abs.gif"></A></TD> 
      <TD><FONT COLOR="FF00FF">
         <A HREF="http://www.ima.umn.edu/~leykin/">Anton Leykin</A> and 
         <A HREF="../../index.html">Frank Sottile</A>, 
