--- a/research/stories/alphaCertified/Download/index.html
+++ b/research/stories/alphaCertified/Download/index.html
@@ -19,8 +19,8 @@
    polynomial equations </h1>
    <font size="+2">
 
-   <a href="/~jhauenst">Jonathan Hauenstein</A> and
-   <a href="/~sottile/index.html">Frank Sottile</a>
+   <a href=""></A>Jonathan Hauenstein and
+   <a href="../../../index.html">Frank Sottile</a>
    </font>
   </td>
  </tr>
