--- a/research/stories/alphaCertified/FAQ/index.html
+++ b/research/stories/alphaCertified/FAQ/index.html
@@ -17,8 +17,8 @@
    <h1><tt>alphaCertified</tt>:<br> Software for certifying numerical solutions to
    polynomial equations </h1>
    <font size="+2">
-   <a href="/~jhauenst">Jonathan Hauenstein</A> and
-   <a href="/~sottile/index.html">Frank Sottile</a>
+   <a href=""></A>Jonathan Hauenstein and
+   <a href="../../../index.html">Frank Sottile</a>
    </font>
   </td>
  </tr>
