--- a/talks/07/FlagLR.html
+++ b/talks/07/FlagLR.html
@@ -43,7 +43,7 @@ which is on the ArXiv at
 <TABLE>
  <TR>
 
-  <TD> <IMG SRC="../../stories/FlagLR/FlagLR.sm.png">
+  <TD> <IMG SRC="../../research/stories/FlagLR/FlagLR.sm.png">
   </TD>
 
   <TD width=30>  </TD>
@@ -52,17 +52,17 @@ which is on the ArXiv at
     The picture at the left shows the four filtered tableaux corresponding to the
     degree of the product 
     <center>
-      <i>p</i><sup>*</sup><i>S</I><sub>1,<img src="../../stories/FlagLR/3.1.png"></sub>
+      <i>p</i><sup>*</sup><i>S</I><sub>1,<img src="../../research/stories/FlagLR/3.1.png"></sub>
       &nbsp;&nbsp;
-      <i>p</i><sup>*</sup><i>S</I><sub>2,<img src="../../stories/FlagLR/3.2.png"></sub>
+      <i>p</i><sup>*</sup><i>S</I><sub>2,<img src="../../research/stories/FlagLR/3.2.png"></sub>
       &nbsp;&nbsp;
-      <i>p</i><sup>*</sup><i>S</I><sub>3,<sub><sub><img src="../../stories/FlagLR/21.3.png"></sub></sub></sub>
+      <i>p</i><sup>*</sup><i>S</I><sub>3,<sub><sub><img src="../../research/stories/FlagLR/21.3.png"></sub></sub></sub>
       &nbsp;&nbsp;
       <i>p</i><sup>*</sup><i>S</I><sub>4,
-         <sub><sub><sub><sub><img src="../../stories/FlagLR/111.4.png"></sub></sub></sub></sub></sub>
+         <sub><sub><sub><sub><img src="../../research/stories/FlagLR/111.4.png"></sub></sub></sub></sub></sub>
        &nbsp;&nbsp;
        <i>p</i><sup>*</sup><i>S</I><sub>5,
-         <sub><sub><sub><sub><img src="../../stories/FlagLR/111.5.png"></sub></sub></sub></sub></sub>
+         <sub><sub><sub><sub><img src="../../research/stories/FlagLR/111.5.png"></sub></sub></sub></sub></sub>
         &nbsp;&nbsp; =  &nbsp;&nbsp; 4&nbsp;[pt]
      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     </center>
@@ -77,7 +77,7 @@ which is on the ArXiv at
     &nbsp;&nbsp; The pieces in the filtered tableaux are Littlewood-Richardson 
  skew tableaux corresponding to the partitions that appear in the product.
  Other than the <font color=green>green</font> parition, 
- <sub><img src="../../stories/FlagLR/21.3.png"></sub>, there will always be a unique Littlewood-Richardson
+ <sub><img src="../../research/stories/FlagLR/21.3.png"></sub>, there will always be a unique Littlewood-Richardson
  skew tableaux (or none) of any given shape.
  In the one case where there is more than a single Littlewood-Richardson tableau,
  we have written the two possibilities.
@@ -86,7 +86,7 @@ which is on the ArXiv at
 <HR>
 <!----------------------------------------------------------------------->
  <A NAME="PS">[PS]</A>
-   K.&nbsp;Purbhoo and F.&nbsp;Sottile, <A HREF="../../pdf/Grassmannian.pdf"><EM>A
+   K.&nbsp;Purbhoo and F.&nbsp;Sottile, <A HREF="../../research/pdf/Grassmannian.pdf"><EM>A
 	Littlewood-Richardson rule for Grassmannian  permutations</EM></A>,  
    <tt>ArXiv.org/0708.1582</tt>.
 <!----------------------------------------------------------------------->
