--- a/talks/17/4D/index.html
+++ b/talks/17/4D/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="#ffffff">
 <font size=+3><b>Platonic solids in the next dimension</b></font><br>
 <font size="+2"> 
- <a href="/~sottile/index.html">Frank Sottile</a>
+ <a href="../../index.html">Frank Sottile</a>
 </font><br>
 
 
