some homework for 221H

--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,6 +20,13 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<b>Seventh Homework (Due Thursday 5 October in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW07.pdf">pdf</a> of the assignment and its
+<a href="221_HW/HW07.tex">LaTeX source</a>, and an 
+<a href="221_HW/HW07_1.pdf">image</a>.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <b>Sixth Homework (Due Thursday 28 September in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW06.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW06.tex">LaTeX source</a>.
@@ -75,7 +82,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sun Sep 24 20:15:10 CDT 2023 by sottile</p>
+<p>Last modified: Sun Oct 01 16:10:09 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
