--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    <!------   This is to fit in the rotation and cerdits  ---------------------------->   
      <table> 
        <tr valign=bottom><td><a href="Frank.html"><IMG SRC="images/frank.jpg" ALT="Giant White Squill August 2020"></a><br>
-	   Photo Credit: Sarah Witherspoon
+	   Photo Credit: Taylor Brysiewicz
  <!--   </td><td>&nbsp;</td>
    <td valign=right class="rotate">Photo: Sarah Witherspoon</td>-->
    </tr></table>
@@ -374,7 +374,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Aug 20 14:18:57 CDT 2023 by sottile</p>  
+<p>Last modified: Tue Oct 03 13:50:49 CDT 2023 by sottile</p>  
  </body>
 </html> 
 
