--- a/Frank.html
+++ b/Frank.html
@@ -6,6 +6,10 @@
 <table>
  <tr valign=top>
    <td>
+    <a href="Frank.html"><IMG height=300 SRC="images/frank/frank_23.jpg" ALT="Grand Canyon on 60th Birthday"></a><br>
+     Grand Canyon Hike<br>March 2023
+  </td>
+   <td>
     <a href="Frank.html"><IMG height=300 SRC="images/frank/frank_22.jpg" ALT="Dead Tree in Davis Mountains with arm sling"></a><br>
      Tree in Davis Mountains with<br> Arm Sling, March 2022
   </td>
@@ -15,45 +19,45 @@
   </td>
  <td>
     <a href="Frank.html"><IMG SRC="images/frank/frank_19J.jpg" ALT="Andorra June 2019"></a><br>
-     Vall del Madriu-Perafita-Claror, June 2019
-  </td>
-  <td>
-    <IMG SRC="images/frank/frank_19_square.jpg" alt="BIRS 2019"><BR>
-    In Banff 2019
+     &nbsp; &nbsp;Vall del Madriu-Perafita-Claror, June 2019
   </td>
  </tr>
  <!---------------------------------------->
  <tr valign=top>
+  <td>
+    <IMG SRC="images/frank/frank_19_square.jpg" alt="BIRS 2019"><BR>
+    In Banff 2019
+  </td>
   <td colspan=2>
     <IMG SRC="images/frank/frank_17.jpg" alt="CIMPA School in Ibadan 2017"><BR>
-    CIMPA School in Ibadan 2017.  Photo: Olanrewaju Johnson
+    &nbsp; &nbsp; CIMPA School in Ibadan 2017.  Photo: Olanrewaju Johnson
   </td>
   <td>
     <IMG SRC="images/frank/frank_16_square.jpg" alt="Blackcomb Glacier Cave 2016"><BR>
     Blackcomb Glacier Cave 2016
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_15.jpg" alt="Alpe de Suisi 2015"><BR>
     Alpe de Suisi 2015
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td colspan=2>
     <IMG SRC="images/frank/frank_14.jpg" alt="Hawaii 2014"><BR>
-    Hawaii Lava 2014
+     &nbsp; &nbsp;Hawaii Lava 2014
   </td>
   <td>
     <IMG SRC="images/frank/frank_13.jpg" alt="Yosemite 2013"><BR>
     Yosemite 2013
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_12.jpg" alt="Sokoto, Nigeria, 2012"><BR>
     Sokoto, Nigeria, 2012
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
     <IMG SRC="images/frank/frank_11.jpg" alt="Norrviken 2011"><BR>
     Norrviken 2011
@@ -66,13 +70,13 @@
    <IMG SRC="images/frank/frank_10.jpg" alt="Sunshine 2010"><BR>
    Banff 2010
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_09.jpg" alt="Innsbruck 2009"><BR>
    Innsbruck 2009
   </td>
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_08.jpg" alt="Switz. 2008"><BR>
    Schweitz im 2008
@@ -85,14 +89,13 @@
    <IMG SRC="images/frank/frank_04.jpg" alt="Banff in 2004"><BR>
    Banff 2004
   </td>
+ </tr>
+ <!---------------------------------------->
+ <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_01.UM.jpg" alt="U Mich visit in 2001"><BR>
    Talk at U Michigan 2001
   </td>
-   <!------------------------------------------------->
- </tr>
- <!---------------------------------------->
- <tr valign=top>
   <td>
    <IMG SRC="images/frank/frank_01.jpg" alt="U Mass in 2001"><BR>
    U Mass 2001
