--- a/conferences/Banff13/13w5062.html
+++ b/conferences/Banff13/13w5062.html
@@ -30,7 +30,7 @@
 
 <DD><A HREF="http://www.cise.ufl.edu/~jorg/">J&ouml;rg Peters</A>,  University of Florida.
 
-<DD><A HREF="/~sottile">Frank Sottile</A>, 
+<DD><A HREF="http://www.math.tamu.edu/~sottile">Frank Sottile</A>, 
      Texas A&amp;M University.
 
 <HR>
@@ -93,7 +93,7 @@
  </DD>
 <!----------------------------------------------------------->
  <DD><IMG SRC="images/blue.png"> 
-     <A href="/~cirving/">Corey Irving</A>, Texas A&amp;M University.
+     <A href="http://www.math.tamu.edu/~cirving/">Corey Irving</A>, Texas A&amp;M University.
  </DD>
 <!----------------------------------------------------------->
  <DD><IMG SRC="images/blue.png"> 
