--- a/teaching/23.2/653_HW.html
+++ b/teaching/23.2/653_HW.html
@@ -12,11 +12,7 @@
 <hr>
 <!------------------------------------------------------------------------->
 <dl>
- <!--<dd>  <a href="653_HW/HW11.pdf">Assignment 11</a> Due 30 November.</font></dd>
- <dd>  <a href="653_HW/HW10.pdf">Assignment 10</a> Due 14 November.</dd>
- <dd>  <a href="653_HW/HW9.pdf">Assignment 9</a> Due 7 November.</dd>
- <dd>  <a href="653_HW/HW8.pdf">Assignment 8</a> Due 31 October.</dd>
- <dd>  <a href="653_HW/HW7.pdf">Assignment 7</a> Due 24 October.</dd>-->
+ <dd>  Assignment 7: <a href="653_HW/HW76.pdf">pdf</a> <a href="653_HW/HW07.tex">LaTeX</a> Due 14 October.</dd>
  <dd>  Assignment 6: <a href="653_HW/HW06.pdf">pdf</a> <a href="653_HW/HW06.tex">LaTeX</a> Due 2 October.</dd>
  <dd>  Assignment 5: <a href="653_HW/HW05.pdf">pdf</a> <a href="653_HW/HW05.tex">LaTeX</a> Due 25 September.</dd>
  <dd>  Assignment 4: <a href="653_HW/HW04.pdf">pdf</a> <a href="653_HW/HW04.tex">LaTeX</a> Due 18 September.</dd>
