--- a/talks.html
+++ b/talks.html
@@ -153,6 +153,13 @@
    <a href="talks/23/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math Club,
+    Texas A&amp;M University, 17 October 2023.
+   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
 
  <!---------------------------------------------------------------------------------------->
 </ul>
