--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,10 +20,17 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<b>Eighth Homework (Due Thursday 19 October in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW08.pdf">pdf</a> of the assignment and its
+<a href="221_HW/HW08.tex">LaTeX source</a>, and an 
+<a href="221_HW/images/HW07_8.pdf">image</a>.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <b>Seventh Homework (Due Thursday 5 October in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW07.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW07.tex">LaTeX source</a>, and an 
-<a href="221_HW/HW07_1.pdf">image</a>.
+<a href="221_HW/images/HW07_1.pdf">image</a>.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
@@ -82,7 +89,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sun Oct 01 16:10:09 CDT 2023 by sottile</p>
+<p>Last modified: Sun Oct 15 13:30:11 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
