--- a/teaching/23.2/653_HW.html
+++ b/teaching/23.2/653_HW.html
@@ -12,6 +12,7 @@
 <hr>
 <!------------------------------------------------------------------------->
 <dl>
+ <dd>  Assignment 7: <a href="653_HW/HW08.pdf">pdf</a> <a href="653_HW/HW08.tex">LaTeX</a> Due 23 October.</dd>
  <dd>  Assignment 7: <a href="653_HW/HW07.pdf">pdf</a> <a href="653_HW/HW07.tex">LaTeX</a> Due 16 October.</dd>
  <dd>  Assignment 6: <a href="653_HW/HW06.pdf">pdf</a> <a href="653_HW/HW06.tex">LaTeX</a> Due 2 October.</dd>
  <dd>  Assignment 5: <a href="653_HW/HW05.pdf">pdf</a> <a href="653_HW/HW05.tex">LaTeX</a> Due 25 September.</dd>
