--- a/advising/index.html
+++ b/advising/index.html
@@ -37,21 +37,21 @@
     <br>
 
   <!------------------------------------------------------------------>
-   <li>
-     <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, TAMU Ph.D. Student.
+    <li>
+     <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Graduate Student.
     </li>
  <!------------------------------------------------------------------>
     <li>
-     <A HREF="http://www.math.tamu.edu/~mfaust/">Matthew Faust</a>, TAMU Graduate Student.
-    </li>
- <!------------------------------------------------------------------>
-    <li>
-      <A HREF="https://sites.google.com/view/taylorbrysiewicz"></a>CJ Bott, TAMU Ph.D. Student.
+      <A HREF=""></a>CJ Bott, TAMU Ph.D. Student.
     </li>
  <!------------------------------------------------------------------>
    <li>
     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
    </li>
+ <!------------------------------------------------------------------>
+   <li>
+     <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
+    </li>
  <!------------------------------------------------------------------>
      <br>
 
@@ -185,12 +185,12 @@
      Merri Stillman,  Master's Student in Distance Program.
     </li>
     <li>
-     Osman Quinteros,  Master's Student in Distance Program.
-    </li>
-    <li>
      Jennifer Pickrel,  Master's Student in Distance Program.
     </li>
    <hr align=left width=40%>
+    <li>
+     Osman Quinteros,  Master's Student in Distance Program.  Ggraduated in December 2023.
+    </li>
     <li>
      Riley Barker,  TAMU Master's Student. Graduated in May 2022.
     </li>
@@ -238,22 +238,18 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
+    <A HREF=""></a>Somak Dutta, 2023&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
      <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, 2021&ndash;
   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
-    <A HREF="https://www.math.tamu.edu/~kmaluccio/"></a>Christopher Bott, 2020&ndash;
-  </li>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
-  <li>
-     <A HREF="http://www.math.tamu.edu/~mfaust/">Matthew Faus</a>t, 2019&ndash;.
+     <A HREF="http://mattfaust.github.io//">Matthew Faus</a>t, 2019&ndash;.
    </li>
- <!------------------------------------------------------------------>
-    <li>
-     <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, 2019&ndash;.
-    </li>
  <BR>
  <!------------------------------------------------------------------>
  <!-----------             Completed Theses             ------------->
@@ -262,10 +258,19 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
     <li>
+     <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>;  2019&ndash;2023 (Ph.D. 2023).
+    <table>
+    <tr><td></td><td></td>
+     <td>Van Vleck Postdoc at the University of Wisconsin Madison.</td> 
+    </tr>
+    </table>
+   </li>
+ <!-------------------- Number 10 ----------------------------------->
+    <li>
       <A HREF=""></a>Elise Walker 2017&ndash; 2022. (Ph.D. 2022).
     <table>
     <tr><td></td><td></td>
-     <td>Postdoc at Sandia Natinal Labs.</td> 
+     <td>Postdoc at Sandia National Labs.</td> 
     </tr>
     <tr>
      <td>&nbsp;</td>
