--- a/service.html
+++ b/service.html
@@ -309,7 +309,7 @@
    <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, TAMU Graduate Student.
  </dd>
  <dd>
-   <A HREF="http://www.math.tamu.edu/~mfaust/">Matthew Faust</a>, TAMU Graduate Student.
+   <A HREF="https://mattfaust.github.io">Matthew Faust</a>, TAMU Graduate Student.
  </dd>
  <!------------------------------------------------------------------>
  <dd>
