--- a/teaching.html
+++ b/teaching.html
@@ -201,7 +201,7 @@
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
-    Osman Quinteros,  TAMU Master's Student.
+    Osman Quinteros,  TAMU Master's Student.   Passed his Master's exam OCtober 2023
  </dd>
  <!---------------------------------------------------------------------------------------------------->
   <dd>
@@ -214,16 +214,21 @@
  <br>
   <!------------------------------------------------------------------>
  <dd>
-   <A HREF="http://www.math.tamu.edu/~mfaust/">Matthew Faust</a>, TAMU Ph.D. Student.
+   <A HREF="https://mattfaust.github.io">Matthew Faust</a>, TAMU Ph.D. Student.
  </dd>
  <!------------------------------------------------------------------>
   <dd>
-    <A HREF="https://www.math.tamu.edu/~cj/"></a>Christopher Bott, TAMU Ph.D. Student.
+    <A HREF=""></a>Christopher Bott, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <dd>
     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
+  </dd>
+ <!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+  <dd>
+    <A HREF=""></a>Somak Dutta, TAMU Ph.D. Student.
   </dd>
  <!------------------------------------------------------------------>
 
