--- a/CV.html
+++ b/CV.html
@@ -448,7 +448,7 @@ Cambridge University.
    <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, January 2018 &ndash; 
  </li>
  <li>
- <A HREF="http://www.math.tamu.edu/~mfaust">Matthew Faust</a>, September 2019 &ndash; 
+ <A HREF="https://mattfaust.github.io">Matthew Faust</a>, September 2019 &ndash; 
  </li>
  <li>
    <A HREF="http://www.math.tamu.edu/~cbott2/"></a>C.J. Bott, November 2020 &ndash; 
