HW for this week

--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,6 +20,14 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center><td><img src="../images/strange_polar.png">&nbsp;</td> <td>
+<b>Ninth Homework (Due Thursday 26 October in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW09.pdf">pdf</a> of the assignment.
+<font color=red>There are more problems than usual in this assignment.</font>
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <b>Eighth Homework (Due Thursday 19 October in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW08.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW08.tex">LaTeX source</a>, and an 
@@ -89,7 +97,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sun Oct 15 13:30:11 CDT 2023 by sottile</p>
+<p>Last modified: Sat Oct 21 21:31:54 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
