new talk, updates

--- a/talks.html
+++ b/talks.html
@@ -124,9 +124,15 @@
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
-
-   
-   
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>
+    Texas A&amp;M Math Circle&mdash;advanced,
+    11 November 2023.
+    <a href="talks/23/BlochDiscriminants.txt"></a>
+    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Bloch Discriminants</I></font>
@@ -141,10 +147,9 @@
     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
    Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
     of Louisiana, Lafayette. 
-   <a href="talks/23/SIAM_AG.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+   <a href="talks/23/SIAM_AG.txt">abstract</a> &nbsp; <a href="talks/23/WAMS.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------->
-
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
