--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -111,13 +111,17 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--  Schubert Ideals  -->
 <dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="https://jordylopez27.github.io/"></a>, CJ Bott Texas A&amp;M University.
+    <A HREF=""></a>, CJ Bott Texas A&amp;M University.
 
 
-    <!--  quot 2008  -->  
+<!--  quot 2008  -->  
 <dd><IMG SRC="images/dots/one.png">
      <A HREF="http://www.math.umass.edu/~braden">Tom Braden</A>, University of
   Massachusetts,  Amherst, MA, USA.
+
+<!--  EnrichedWronski  -->  
+<dd><IMG SRC="images/dots/vapourware.png">
+     <A HREF="">Thomas Brazelton</A>, Harvard University.
 
 <!--  EDD 2020   NNLA 2023  -->  
 <dd><IMG SRC="images/dots/two.png">
@@ -315,6 +319,10 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www.math.ias.edu/~phares/macpherson/RDM.html">
     R. MacPherson</A>, Institute for Advanced Study, Princeton.
+
+<!-- EnrichedWronski -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="">Stephen McKean</A>, Harvard University.
 
 <!-- RealRoots 2022 -->
 <dd><IMG SRC="images/dots/one.png">
