--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -20,6 +20,17 @@ Section  201
 <!----   problems/week    ------>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center> <td>
+<b>Tenth Homework (Due Thursday 2 November in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW10.pdf">pdf</a> of the assignment.
+<a href="221_HW/HW10.tex">LaTeX source</a>, and some  images
+<a href="221_HW/images/HW10_1.pdf"><tt>HW10_1.pdf</tt></a>, 
+<a href="221_HW/images/HW10_2.pdf"><tt>HW10_2.pdf</tt></a>, and 
+<a href="221_HW/images/HW10_3.pdf"><tt>HW10_3.pdf</tt></a>.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <table><tr vaign=center><td><img src="../images/strange_polar.png">&nbsp;</td> <td>
 <b>Ninth Homework (Due Thursday 26 October in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW09.pdf">pdf</a> of the assignment.
@@ -31,7 +42,7 @@ Here is a <a href="221_HW/HW09.pdf">pdf</a> of the assignment.
 <b>Eighth Homework (Due Thursday 19 October in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW08.pdf">pdf</a> of the assignment and its
 <a href="221_HW/HW08.tex">LaTeX source</a>, and an 
-<a href="221_HW/images/HW07_8.pdf">image</a>.
+<a href="221_HW/images/HW08_1.pdf">image</a>.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
@@ -97,7 +108,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sat Oct 21 21:31:54 CDT 2023 by sottile</p>
+<p>Last modified: Sun Oct 29 16:25:21 CDT 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
