--- a/service/letters.html
+++ b/service/letters.html
@@ -37,7 +37,7 @@
 <p>
 &nbsp; &nbsp;
 I am very willing to write a letter for a deserving candidate
-(which you presumbly are).
+(which you presumably are).
 However, I need your help for this process to work.
 Please try to keep the following in mind:
 
@@ -58,7 +58,7 @@ Please try to keep the following in mind:
 
  <li>  
   <font color=blue>Deadlines</font> &nbsp;
-   Deadine and information on submitting the letter.
+   Deadline and information on submitting the letter.
  </li>
 
  <li>
