--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -21,6 +21,18 @@ Section  201
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <table><tr vaign=center> <td>
+<b>Eleventh Homework (Due Thursday 9 November in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW11.pdf">pdf</a> of the assignment.
+<a href="221_HW/HW11.tex">LaTeX source</a>, and some  images
+<a href="221_HW/images/HW11_1.pdf"><tt>HW11_1.pdf</tt></a>, 
+<a href="221_HW/images/HW11_2.pdf"><tt>HW11_2.pdf</tt></a>, 
+<a href="221_HW/images/HW11_3.pdf"><tt>HW11_3.pdf</tt></a>, and 
+<a href="221_HW/images/HW11_4.pdf"><tt>HW11_4.pdf</tt></a>.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center> <td>
 <b>Tenth Homework (Due Thursday 2 November in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW10.pdf">pdf</a> of the assignment.
 <a href="221_HW/HW10.tex">LaTeX source</a>, and some  images
