--- a/talks.html
+++ b/talks.html
@@ -139,7 +139,7 @@
     Minisymposium on Discrete and Continuous Schr&ouml;dinger Operators, SIAM TX-LA Meeting, November 3&ndash;5,
     2023, University of Louisiana, Lafayette. 
     <a href="talks/23/BlochDiscriminants.txt">abstract</a>
-    <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+    <a href="talks/23/TX_LA-23_BD.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
@@ -147,7 +147,7 @@
     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
    Minisymposium on Nonlinear algebra in applications, SIAM TX-LA Meeting, November 3&ndash;5, 2023, University
     of Louisiana, Lafayette. 
-   <a href="talks/23/SIAM_AG.txt">abstract</a> &nbsp; <a href="talks/23/WAMS.pdf">text of talk</a>.
+   <a href="talks/23/SIAM_AG.txt">abstract</a> &nbsp; <a href="talks/23/TX_LA-23_W.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
