--- a/teaching/23.2/221_HW.html
+++ b/teaching/23.2/221_HW.html
@@ -21,6 +21,19 @@ Section  201
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <table><tr vaign=center> <td>
+<b>Twelfth Homework (Due Thursday 16 November in recitation):</b>  &nbsp;
+Here is a <a href="221_HW/HW12.pdf">pdf</a> of the assignment.
+<a href="221_HW/HW12.tex">LaTeX source</a>, and some  images
+<a href="221_HW/images/HW12_1.pdf"><tt>HW12_1.pdf</tt></a>, 
+<a href="221_HW/images/HW12_2.pdf"><tt>HW12_2.pdf</tt></a>, 
+<a href="221_HW/images/HW12_3.pdf"><tt>HW12_3.pdf</tt></a>, 
+<a href="221_HW/images/HW12_4.pdf"><tt>HW12_4.pdf</tt></a>, and 
+<a href="221_HW/images/HW12_5.pdf"><tt>HW12_5.pdf</tt></a>.
+</td></tr></table>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<table><tr vaign=center> <td>
 <b>Eleventh Homework (Due Thursday 9 November in recitation):</b>  &nbsp;
 Here is a <a href="221_HW/HW11.pdf">pdf</a> of the assignment.
 <a href="221_HW/HW11.tex">LaTeX source</a>, and some  images
@@ -120,7 +133,7 @@ Here is a <a href="221_HW/HW01.pdf">pdf</a> of the assignment and its
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Sun Oct 29 16:25:21 CDT 2023 by sottile</p>
+<p>Last modified: Sat Nov 11 17:04:41 CST 2023 by sottile</p>
 <!---------------------------------------------------------------------------->
 <hr/>
 </BODY>
