--- a/advising/advising.html
+++ b/advising/advising.html
@@ -69,10 +69,6 @@ You needn't take my word on this, feel free to contact those who have worked wit
 <font color=maroon>Current Students</font>
  <ul>
  <!------------------------------------------------------------------>
- <li>
-  <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. Student.
- </li>
- <!------------------------------------------------------------------>
   <li>
     <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Graduate Student.
   </li>
@@ -87,10 +83,19 @@ You needn't take my word on this, feel free to contact those who have worked wit
     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
  </li>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <li>
+    <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
+ </li>
+ <!------------------------------------------------------------------>
 </ul>
 
 <font color=maroon>Former Students</font>
 <ul>
+ <!------------------------------------------------------------------>
+ <li>
+  <A HREF="https://tjyahl.github.io/">Thomas Yahl</a>, TAMU Ph.D. Student.
+ </li>
  <!------------------------------------------------------------------>
  <li>
   <A HREF="https://sites.google.com/view/elise-walker/">Elise Walker</a>, TAMU Ph.D. Student.
