--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     Numerical algebraic geometry, applications of algebraic geometry, algebraic geometry in spectral theory,
     real algebraic geometry,
     algebraic combinatorics,  Hopf Algebras, Discrete and Computational Geometry, tropical
-    geometry. 
+    geometry, spectral theory. 
    <!---------------------------------------------------------------------------->
  <!--  <hr> -->
    <!---------------------------------------------------------------------------->
@@ -247,7 +247,7 @@
      <a href="service/letters.html">this</a> before asking me for a letter.
    <!---------------------------------------------------------------------------->
    <hr>
-   <!---------------------------------------------------------------------------->
+   <!----------------------------------------------------
      <font color=red size=+1>Eschew Elsevier!</font> &nbsp; 
     Two new(er) lows:
     <a
@@ -270,7 +270,7 @@
     and here is a
     <a href="http://michaelnielsen.org/polymath1/index.php?title=Journal_publishing_reform">link</a>
     with more information.
-   </td>
+   </td>------------------------>
    <!---------------------------------------------------------------------------->
  </tr>
 </TABLE>
@@ -374,7 +374,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Oct 03 13:50:49 CDT 2023 by sottile</p>  
+<p>Last modified: Sun Nov 12 14:47:49 CST 2023 by sottile</p>  
  </body>
 </html> 
 
