--- a/service.html
+++ b/service.html
@@ -305,9 +305,6 @@
 <B><FONT SIZE=+1 color=brown>Current Advisees</FONT></B>
 
 <dl>
-<dd>
-   <A HREF="http://www.math.tamu.edu/~thomasjyahl/">Thomas Yahl</a>, TAMU Graduate Student.
- </dd>
  <dd>
    <A HREF="https://mattfaust.github.io">Matthew Faust</a>, TAMU Graduate Student.
  </dd>
@@ -318,6 +315,11 @@
  <!------------------------------------------------------------------>
  <dd>
     <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
+ </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <dd>
+    <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
  </dd>
  <!------------------------------------------------------------------>
 
